<resources>
    <string name="title_home">Prediction</string>
    <string name="title_dashboard">Fixtures</string>
    <string name="title_customize">Customize</string>
    <string name="title_activity_rivalry">RivalryActivity</string>
    <string name="title_info">Info</string>
    <string name="title_select_team">Select team</string>
    <string name="title_new_coach">New coach to join recently</string>
    <string name="title_believe_win">I believe in this team!</string>
    <string name="title_key_players_injured">Key players injured</string>
    <string name="title_team_motivation">Team motivation</string>
    <string name="title_key_strikers_form">Key strikers form</string>

    <string name="input_team_1">Home team</string>
    <string name="input_team_2">Away team</string>

    <string name="buttons_search">Search</string>
    <string name="buttons_calculate">Recalculate</string>

    <string name="app_name">Artificial Soccer Predictions</string>
    <string name="app_version">App version</string>
    <string name="app_version_number">0.1</string>
    <string name="app_icons">Icons</string>
    <string name="app_icons_source">flaticon.com</string>
    <string name="app_graphic">Graphic</string>
    <string name="app_graphic_source">freepik.com &amp; own</string>
    <string name="app_feedback">Contact author</string>
    <string name="app_feedback_mail">zsggem@gmail.com</string>
    <string name="app_disclaimer">
        Our app is provided on an \"AS IS\" basis and we do not make any representations
        or warranties if such information subsequently proves to be inaccurate or out of date.
        If you believe that Content violates your copyright, please send us a notice of the violation
    </string>

    <string name="teams_prediction_query">
        {\"query\":\"{teamsPrediction(team1: \\\"%1$s\\\", team2: \\\"%2$s\\\") {rates}}\",\"variables\":null,\"operationName\":null}
    </string>
    <string name="teams_fixtures_query">
        {\"query\":\"{teamsFixtures(team1: \\\"%1$s\\\", team2: \\\"%2$s\\\")
        {stadium, schedule_date, team_season_home_name, team_season_away_name, number_goal_team_home, number_goal_team_away, referee_name, id_country}}\", \"variables\":null,\"operationName\":null}
    </string>
    <string name="teams_prediction_tune_query">
        {\"query\":\"{predictionTune(%1$s) {rates}}\",\"variables\":null,\"operationName\":null}
    </string>
</resources>
